@@ -4,7 +4,7 @@
 #include "copyright.h"
 
 #define	MUSH_VERSION		"3.0"		/* Base version number */
-#define PATCHLEVEL		1		/* Patch sequence number */
-#define	MUSH_RELEASE_DATE	"12/05/2000"	/* Source release date */
+#define PATCHLEVEL		2		/* Patch sequence number */
+#define	MUSH_RELEASE_DATE	"1/26/2001"	/* Source release date */
 
 /* #define BETA			1	*/	/* Define if a BETA release */
